maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:3: error: not found: value keepHandOnWallSide
  keepHandOnWallSide()
  ^