maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
  keepHandOnWallSide()
  }
prendBiscuit()
}

def keepHandOnSideWall(){
  gauche()
  while(!estFaceMur()){
    avance()
  }
}